# llama_infer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: alloc.h  base.h  buffer.h  config.h  encode.h  layer.h  model.h  op.h  qwen2.h  sampler.h  tensor.h  tiktoken.h  unicode.h  unordered_dense.h
main/: CMakeLists.txt  chat.cc
src/: alloc.cc  buffer.cc  encode.cc  layer.cc  model.cc  op.cc  qwen2.cc  sampler.cc  tensor.cc
tools/: export_qwen2.py
